# osxtest

./: CPrimitives.cpp
osxtest/: CMakeLists.txt  COBJFile.cpp  COBJFile.h  CPrimitives.h  CShader.cpp  CShader.h  CTexture.cpp  CTexture.h  CTypes.cpp  CTypes.h  CVertexBatch.cpp  CVertexBatch.h  CVertexBuffer.cpp  CVertexBuffer.h  Notes  main.cpp  osxtest.1
osxtest.xcodeproj/: project.pbxproj
osxtest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osxtest.xcodeproj/project.xcworkspace/xcshareddata/: osxtest.xccheckout
osxtest.xcodeproj/xcuserdata/compendium.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
osxtest.xcodeproj/xcuserdata/compendium.xcuserdatad/xcschemes/: osxtest.xcscheme  test.xcscheme  xcschememanagement.plist
osxtest/resources/: basic_color_shader.frag  basic_color_shader.vert  basic_texture_shader.frag  basic_texture_shader.vert  p.frag  p.vert  test.frag  test.vert  text.frag  text.vert
